--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -30,17 +30,17 @@
                 </div>
                 <div class="row" style="padding:3px">
                     <div class="col-md-2">Start</div>
-                    <div class="col-md-5"><input v-model="StartTime" id="starttime" /></div>
+                    <div class="col-md-5"><input onchange="EventForm.setStartTime()" v-model="StartTime" id="starttime" /></div>
                 </div>
                 <div class="row" style="padding:3px">
                     <div class="col-md-2">End</div>
-                    <div class="col-md-5"><input v-model="EndTime" id="endtime" /></div>
+                    <div class="col-md-5"><input onchange="EventForm.setEndTime()" v-model="EndTime" id="endtime" /></div>
                 </div>
                 <div class="row" style="padding:3px">
                     <div class="col-md-2">TimeZone</div>
                     <div class="col-md-5">
-                        <select v-model="TimeZone" style="padding:3px">
-                            <option v-for="tz in TimeZoneList" :value="tz.label">{{tz.label}}</option>
+                        <select v-model="TimeZone" id="timezone" style="padding:3px">
+                            <option v-for="tz in TimeZoneList" :title="tz.offset" :value="tz.label">{{tz.label}}</option>
                         </select>
                     </div>
                 </div>
@@ -72,20 +72,27 @@
 <!-- Modal -->
 
 <script>
-    var Account = { Email: "", UserName: "", Domain: "" };
-    Account.Email = "@User.Identity.Name";
-    Account.UserName = /([^@@]+)\@@/.exec(Account.Email)[1];
-    Account.Domain = /\@@([^@@]+)/.exec(Account.Email)[1];
+    var momentjsformat = "MM/DD/YYYY hh:mm A";
 
 
     $(function () {
-        $('#starttime').datetimepicker({
-            timeFormat: "hh:mm tt"
-        });
+        //EventForm.StartTime = "04/19/2019 03:00 pm";
+        //EventForm.EndTime = "04/19/2019 03:00 pm";
 
-        $('#endtime').datetimepicker({
-            timeFormat: "hh:mm tt"
-        });
+        var startDateTextBox = $('#starttime');
+        var endDateTextBox = $('#endtime');
+
+        $.timepicker.datetimeRange(
+            startDateTextBox,
+            endDateTextBox,
+            {
+                minInterval: (1000 * 60 * 60), // 1hr
+                dateFormat: 'mm/dd/yy',
+                timeFormat: 'hh:mm tt',
+                start: {}, // start picker options
+                end: {} // end picker options					
+            }
+        );
 
         EventForm.Organizer = Account.UserName;
         EventForm.Email = Account.Email;
@@ -115,6 +122,11 @@
             Private: false,
             Icon: false
         },
+        computed: {
+            TzOffset: function () {
+                return $('#timezone').find("option:selected").prop("title")
+            }
+        },
         beforeCreate: function() {
             axios.get('https://www.addevent.com/api/v1/timezones')
                 .then(function (response) {
@@ -137,9 +149,11 @@
                 this.Private = false;
                 this.Icon = false;
             },
+            setStartTime: function () {
+                this.StartTime = $("#starttime").val();
+            },
             setEndTime: function () {
-                var starttime = moment(this.StartTime).tz(this.TimeZone);
-                this.EndTime = starttime.add(1, 'hours');
+                this.EndTime = $("#endtime").val();
             },
             setModalTitle: function (title) {
                 this.ModalTitle = title;
