--- a/MyEventURL/Views/Shared/_Layout.cshtml
+++ b/MyEventURL/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/vuejs")
     @Scripts.Render("~/bundles/momentjs")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.4/bluebird.min.js"></script>
     <script>
         var Account = { Email: "", UserName: "", Domain: "" };
         Account.Email = "@User.Identity.Name";
