--- a/MyEventURL/Views/Events/Create.cshtml
+++ b/MyEventURL/Views/Events/Create.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Create</h2>
 @Html.Partial("_EventForm")
-<button onclick="EventForm.setModalTitle('Test2')" data-backdrop="static" data-toggle="modal" data-target="#eventform" style="width:200px; height:50px">Manage</button>
-<a href="#eventform" onclick="EventForm.setModalTitle('Test2')">Copy</a>
-<script>
-    EventForm.setModalTitle("Test");
-</script>
+<button data-backdrop="static" data-toggle="modal" data-target="#eventform" style="width:200px; height:50px">Manage</button>
+
 
