--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -191,10 +191,10 @@
                         Style: this.Style,
                         Private: this.Private,
                         Icon: this.Icon,
+                        Views: 0,
+                        Engaged: 0,
                         //To be removed from schema
                         search: null,
-                        Views: null,
-                        Engaged: null,
                         Facebook: null,
                         AllDay: null,
                         Recurring: null,
